--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,46 @@
-h1, h2 {
-    font-size: 16px;
+.article.blok {
+    border: 1px solid #e9e9e9;
+    padding: 10px;
 }
+
+article.blok p {
+    margin-bottom: 10px;
+}
+
+article.blok > header {
+    border-bottom: 1px solid #e9e9e9;
+    margin-bottom: 10px;
+}
+
+article.blok > header > h1 {
+    padding-bottom: 10px;
+    font-size: 16pt;
+}
+
+#footer {
+    border-top: 1px solid #555;
+    text-align: center;
+    padding: 15px 0px;
+    margin-top: 15px;
+}
+
+.input.blok {
+    margin-top: 10px;
+    padding: 5px;
+}
+
+.input.blok > label {
+    display: inline-block;
+    vertical-align: top;
+    min-width: 150px;
+}
+
+.input.blok > input.field {
+    padding: 5px 10px;
+    min-width: 400px;
+}
+
+
 
 .small-image-new {
     width: 300px;
@@ -13,20 +53,25 @@ h1, h2 {
     padding: 5px;
 }
 
+.venue-item h2 {
+    font-size: 18px;
+}
+
 .venue-image {
     margin-right: 15px;
-    width: 250px;
+    width: 180px;
     height: auto;
     float: left;
 }
 
 .venue-short-text {
     border-top: 1px solid #999;
+    padding: 10px 0px;
 }
 
 .venue-tags i {
     margin: 4px;
-    font-size: 48px;
+    font-size: 32px;
 }
 
 .venue-tags:after {
